--- a/KafkaConsumer.ipynb
+++ b/KafkaConsumer.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "consumer = KafkaConsumer(\n",
     "    'demo-testing',\n",
-    "     bootstrap_servers=['3.80.124.35:9092'], \n",
+    "     bootstrap_servers=['<kafka-ip>:9092'], \n",
     "    value_deserializer=lambda x: loads(x.decode('utf-8')))"
    ]
   },
