--- a/KafkaProducer.ipynb
+++ b/KafkaProducer.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "producer = KafkaProducer(bootstrap_servers=['3.80.124.35:9092'],\n",
+    "producer = KafkaProducer(bootstrap_servers=['<kafka-ip>:9092'],\n",
     "                         value_serializer=lambda x: \n",
     "                         dumps(x).encode('utf-8'))"
    ]
