--- a/KafkaConsumer.ipynb
+++ b/KafkaConsumer.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "for count, i in enumerate(consumer):\n",
-    "    with s3.open(\"s3://kafka-stock-market-project/stock_market_{}.json\".format(count), 'w') as file:\n",
+    "    with s3.open(\"s3://<s3-bucket-name>/stock_market_{}.json\".format(count), 'w') as file:\n",
     "        json.dump(i.value, file)"
    ]
   },
